--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -40,3 +40,14 @@
             flex-direction: row;
         }
 }
+
+@media (max-width : 768px) {
+    #footer-container {
+        p {
+        font-family: 'Lora', serif;
+        font-weight: 600;
+        font-size: larger;
+        font-size: small;
+    }
+}
+}
