--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -41,9 +41,9 @@
                     }
 
                     button:active {
-                        color: black;
-                        border: 1px solid $color2;
-                        background-color: $color2;
+                        color: black !important;
+                        border: 1px solid $color2 !important;
+                        background-color: $color2 !important;
                     }
             }
         }
